services/pfe_devsecops/security/opa/constraints/require-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireLimits
metadata:
  name: require-resource-limits
  annotations:
    description: "Appliqué sur dev et prod — resource limits obligatoires"
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["dev", "prod"]
